[tool.poetry]
name = "feazy"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
psutil = "^5.9.0"
pyobjc = "^8.1"
pandas = "^1.3.5"
gcsa = "^1.3.0"
beautiful-date = "^2.0.0"
python-dateutil = "^2.8.2"
base32-crockford = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
