[tool.poetry]
name = "feazy"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
pandas = "^1.3.5"
gcsa = "^1.3.0"
beautiful-date = "^2.0.0"
notion-client = "^0.8.0"
python-dotenv = "^0.19.2"
aw-client = "^0.5.7"
gtasks = "^0.1.3"
pyRFC3339 = "^1.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
